--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -27,8 +27,10 @@
   <link rel="stylesheet" href="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
-
+<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+  
+  <!-- <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+   -->
   <!-- build:css {{assetPath}}/css/app.css -->
   <link rel="stylesheet" href="{{assetPath}}/css/app.css">
   <!-- endbuild -->
@@ -79,14 +81,9 @@
     <script src="/bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
     <!-- endbower -->
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- endbuild -->
-
     
-    <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
-    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script> 
+    
     
     {# 
     <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
