--- a/app/assets/css/elements/_forms.scss
+++ b/app/assets/css/elements/_forms.scss
@@ -1,7 +1,9 @@
 input {
   padding: 0 10px;
 }
-
+.input-group {
+  margin-bottom: 10px;
+}
 /* Checkbox */
 .checkbox-wrapper {
   margin-bottom: 10px;
