--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -3,7 +3,7 @@
 {% block page %}
 <section class="search-content" data-module="SearchControl">
 
-  <div class="search-control hide-for-small">
+  <div class="search-control hide-for-medium">
     <div class="checkbox-list select--big">
       <span>Service Apartment</span> 
       <ul>
@@ -124,6 +124,20 @@
 
     <a href="#collapseFilter" data-toggle="collapse" class="btn float-right" id="advance-filter" ><span class="notificate bg--red">0</span> More filter <i class="fa fa-angle-down"></i></a>
 
+  </div>
+  <div class="search-control show-for-medium">
+    <div class="search-form">
+      <input type="text" value="" id="search-header" autocomplete="off" />
+      <button class="btn-submit"><i class="fa fa-map-marker"></i></button>
+    </div>
+    <div class="wrap-tag">
+      <a class="tags bg--blue" href="#">Service apartment</a>
+      <a class="tags bg--blue" href="#">5+ Amenities</a>
+      <a class="tags bg--blue" href="#">1+ bed</a>
+      <a class="tags bg--blue" href="#">1+ bath</a>
+      <a class="tags bg--blue" href="#">Max: $700</a>
+    </div>
+    <p>Great! We’ve found <strong>523 listings</strong> that match well your search criteria.</p>
   </div>
 
   <div class="search-detail">
@@ -666,6 +680,18 @@
         <div class="box jplist-no-results text-shadow align-center">
           <p>No results found</p>
         </div>
+        <div class="list-info">
+          <h3>Vinhomes Đồng Khởi</h3>
+          <p> Vinhomes Đồng Khởi được ví như Hòn Ngọc Viễn Đông giữa lòng Sài Gòn nằm trên những cung đường danh giá bậc nhất trung tâm thành phố, 3 mặt tiền đường Đồng Khởi – Lê Thánh Tôn và Lý Tự Trọng với tầm nhìn tuyệt đẹp bao quát toàn bộ trung tâm thành phố hướng ra sông Sài Gòn, Phố đi bộ Nguyễn Huệ, Nhà Thờ Đức Bà.</p>
+          <p>Hội tụ đầy đủ hệ thống dịch vụ tiêu chuẩn 5 sao và tiện ích đẳng cấp vượt trội, Vinhomes Đồng Khởi thiết lập một chuẩn mực khác biệt về phong cách sống, đồng thời cũng là khu căn hộ hiếm hoi đáp ứng được hoàn hảo các nhu cầu.</p>
+        </div>
+
+        <ul class="breadcrumb">
+          <li><a href="#"><i class="fa fa-home"></i></a>  </li>
+          <li><i class="fa fa-angle-right"></i> <a href="#">District 7</a></li>
+          <li><i class="fa fa-angle-right"></i> One Bedroom Service Apartment</li>
+        </ul>
+
       </div>
 
       <div class="tab-content" id="search-project">
