--- a/app/assets/css/elements/_buttons.scss
+++ b/app/assets/css/elements/_buttons.scss
@@ -3,7 +3,9 @@
   width: 50px;
   height: 50px;
   position: relative;
-  @extend .show-for-small;
+  @include screen(medium){
+    display: none;
+  } 
 
   &:before, &:after, span {
     content: '';
