--- a/app/index.twig
+++ b/app/index.twig
@@ -801,7 +801,7 @@
 	</div>
 </section>
 
-<section class="section-project" data-module="SlideProject">
+<section class="section-project slide-project" data-module="SlideProject">
 	<div class="container">
 
 		<h2 class="section-title text-center">Featured Projects</h2>
