--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
   <!-- endbower -->
   <!-- endbuild -->
-<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
   
   <!-- <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
    -->
@@ -83,7 +83,10 @@
     <!-- endbower -->
     <!-- endbuild -->
     
-    
+    <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script>
     
     {# 
     <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
