--- a/app/search-page.twig
+++ b/app/search-page.twig
@@ -122,7 +122,7 @@
       </ul>
     </div>
 
-    <a href="#collapseFilter" data-toggle="collapse" class="btn float-right" id="advance-filter" ><span class="notificate bg--red">0</span> More filter <i class="fa fa-angle-down"></i></a>
+    <a href="javascript:void(0)" data-toggle="#collapseFilter" class="btn float-right"><span class="notificate bg--red">0</span> More filter <i class="fa fa-angle-down"></i></a>
 
   </div>
   <div class="search-control show-for-medium">
@@ -377,8 +377,11 @@
 
         <div class="jplist-drop-down" data-control-type="items-per-page-drop-down" data-control-name="paging" data-control-action="paging" data-control-animate-to-top="true">
           <ul>
-            <li><span data-number="5" data-default="true"> 5 per page </span></li>
+            <li><span data-number="4" data-default="true"> 4 per page </span></li>
+            <li><span data-number="5"> 5 per page </span></li>
             <li><span data-number="6"> 6 per page </span></li>
+            <li><span data-number="7"> 7 per page </span></li>
+            <li><span data-number="8"> 8 per page </span></li>
             <li><span data-number="all"> View All </span></li>
           </ul>
         </div>
@@ -827,7 +830,7 @@
       </div>
     </div>
 
-    <div class="map-result show hide-for-small" data-module="MapResult">
+    <div class="map-result show" data-module="MapResult">
       <div id="map" style="height: 100vh"></div>
 
       <ul id="style-selector-control" class="map-control">
