--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -559,7 +559,9 @@ nav {
   width: 100%;
   z-index: 5;
   background: #fff;
-  box-shadow: 0 0 5px #333;
+  @include screen(medium, false){
+    display: none !important;
+  }
 
   .btn {
     width: 100%;
